--- a/pencode.html
+++ b/pencode.html
@@ -188,6 +188,7 @@
                   Розташування малюнка з бордером
                 </td>
               </tr>
+
               <tr class="tabel__list tabel__list--primery">
                 <td class="tabel__item tabel__item--secondary centered">7</td>
                 <td class="tabel__item tabel__item--secondary">
@@ -203,6 +204,7 @@
                   hover з сислкою та іконкою
                 </td>
               </tr>
+
               <tr class="tabel__list tabel__list--primery">
                 <td class="tabel__item tabel__item--secondary centered">8</td>
                 <td class="tabel__item tabel__item--secondary">
@@ -263,6 +265,23 @@
                   Анімація Heart
                 </td>
               </tr>
+
+              <tr class="tabel__list tabel__list--primery">
+                <td class="tabel__item tabel__item--secondary centered">12</td>
+                <td class="tabel__item tabel__item--secondary">
+                  <a
+                    class="tabel__link"
+                    target="_blank"
+                    href="https://codepen.io/mpadalko/pen/GRWEWMZ?editors=1100"
+                    rel="noopener norefferer nofollow"
+                    >social rotate</a
+                  >
+                </td>
+                <td class="tabel__item tabel__item--secondary">
+                  Анімація іконок соціальних джерел
+                </td>
+              </tr>
+
               <tr class="tabel__list tabel__list--primery">
                 <td class="tabel__item tabel__item--secondary centered">12</td>
                 <td class="tabel__item tabel__item--secondary">
