--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
               <a
                 href="./pencode.html"
                 class="navigation__link navigation__link--rotate"
-                >Pen Code</a
+                >Code Pen</a
               >
             </li>
 
